# voice-indices-web

./: Cargo.toml  README.md  index.html
.github/workflows/: gh-pages-deploy.yml
demo/: Cargo.toml
demo/src/: demo.rs  lib.rs  utils.rs
src/: file_input.rs  main.rs  output_field.rs  table.rs
src/file_input/: mod.rs  worker.rs
