[package]
name = "voice-indices-web"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.19", features = ["csr"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

demo = { path = "demo" }
web-sys = "0.3.102"
js-sys = "0.3"
leptos_workers = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
console_error_panic_hook = "0.1.7"
